--- a/sf1subtheme.libraries.yml
+++ b/sf1subtheme.libraries.yml
@@ -2,6 +2,9 @@ global-styles:
   version: VERSION
   css:
     theme:
+      'https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css': { type: external, minified: true}
       css/style.css: {}
-  js:
+  js:    
+    'https://cdn.jsdelivr.net/momentjs/latest/moment.min.js': { type: external, minified: true}
+    'https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js': { type: external, minified: true}
     js/scripts.js: {}
