--- a/sf1subtheme.info.yml
+++ b/sf1subtheme.info.yml
@@ -2,8 +2,7 @@ name: SiteFarme One - Subtheme
 type: theme
 description: This is a subtheme of Sitefarm One
 package: SiteFarm
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9 || ^10 || ^11
 
 base theme: sitefarm_one
 
