--- a/vue_blocks/vue_gsr_block/vue-vite/package.json
+++ b/vue_blocks/vue_gsr_block/vue-vite/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "vite-plugin-externals": "^0.6.2",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6"
