--- a/vue_blocks/vue_gsr_block/vue-vite/package.json
+++ b/vue_blocks/vue_gsr_block/vue-vite/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.2",
     "vite-plugin-externals": "^0.6.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
