--- a/vue_blocks/vue_vite_reporting_block/vue-vite/package.json
+++ b/vue_blocks/vue_vite_reporting_block/vue-vite/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "vite-plugin-externals": "^0.6.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
